--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -59,15 +59,15 @@
           <h4>Deliverables &amp; Milestones</h4>
           <ol>
             <li>
-              <b>Due: Tuesday, June 6th, 11:59 Chicago</b> Create a Basecamp post describing your work in progress. 
+              <b class="redfont">Due: Tuesday, September 19th, 11:59 Chicago</b> Create a Basecamp post describing your work in progress. 
               Title the post with your name and project number (example Daniel Krieglstein: Project 1). Your post should
               include the URL to your GitHub repository, and two questions eliciting feedback on from fellow students.
             </li>
             <li>
-              <b>Due: Wednesday, June 7th, 11:59 Chicago</b>Give constructive comments to help at least three other students.
+              <b class="redfont">Due: Tuesday, September 26th, 11:59 Chicago</b> Give constructive comments to help at least three other students.
             </li>
             <li>
-            <b>Due: Tuesday, June 13th, 11:59 Chicago</b>Edit your original basecamp post under Project 1 by fixing your code
+              <b class="redfont">Due: Tuesday, October 03th, 11:59 Chicago</b> Edit your original basecamp post under Project 1 by fixing your code
                based on feedback from the professor and fellow students
                </li>
               <ol>
@@ -166,15 +166,15 @@
           <h4>Deliverables &amp; Milestones</h4>
           <ol>
             <li>
-              Fork your Project One directory in Github to create a project two directory. Create a new Basecamp post under "Project Two"
-        with a link to your new directory. Add three of the same style elements to each of your pages. Also add three different 
-        style elements to each of your pages. Include in the text of your basecamp post one or two <b>specific</b> things you would like
+              <b class="redfont">Due: Tuesday, October 17th, 11:59 Chicago</b> Fork your Project One directory in Github to create a project two directory. Create a new Basecamp post under "Project Two"
+              with a link to your new directory. Add three of the same style elements to each of your pages. Also add three different 
+              style elements to each of your pages. Include in the text of your basecamp post one or two <b>specific</b> things you would like
               feedback or help on from the instructor and other students in the class.
             </li>
             <li>
-              Substantive comments reveiwing and helping with at least three other student projects.
+              <b class="redfont">Due: Tuesday, October 24th, 11:59 Chicago</b> Give constructive comments to help at least three other students.
             </li>
-            <li>Final update to your Basecamp post with the following
+            <li><b class="redfont">Due: Tuesday, October 31th, 11:59 Chicago</b> Final update to your Basecamp post with the following
               <ol>
                 <li>
                   A 4-5 sentence self-critique memo of your project and your progress in class to this
@@ -254,22 +254,22 @@
           <h4>Deliverables &amp; Milestones</h4>
           <ol>
             <li>
-              Polish up your CSS based on feedback recieved from the professor. Create a Basecamp post that includes a
-        world-viewable URL of your project, in addition to the URL to your GitHub repository. Include in the text
-        of your post one or two things you would like feedback on from the instructor
+              <b class="redfont">Due: Tuesday, November 14th, 11:59 Chicago</b> Polish up your CSS based on feedback recieved from the professor. Create a Basecamp post that includes a
+              world-viewable URL of your project, in addition to the URL to your GitHub repository. Include in the text
+              of your post one or two things you would like feedback on from the instructor
               and other students in the class.
             </li>
             <li>
-              Substantive comments reveiwing and helping with at least three other student projects.
+              <b class="redfont">Due: Tuesday, November 21th, 11:59 Chicago</b> Give constructive comments to help at least three other students.
             </li>
             <li>
-              Final update to your Basecamp post with the following
+              <b class="redfont">Due: Tuesday, November 28th, 11:59 Chicago</b> Final update to your Basecamp post with the following
               <ol>
                 <li>
-           Javascript: Iclusion of either a google maps api utilizing at least three javascript features, 
-           or a javscript based rotating picture display.
-          </li>
-          <li>
+                  Javascript: Iclusion of either a google maps api utilizing at least three javascript features, 
+                  or a javscript based rotating picture display.
+                </li>
+                <li>
                   A 5-8 sentence self-critique memo of your project and your progress in class this
                   semester
                 </li>
