Updating commit and participation

--- a/syllabuspages/policies.html
+++ b/syllabuspages/policies.html
@@ -205,12 +205,10 @@
           I do not accept late work. All work must be submitted before the date and time specified
           in each project description.
         </p>
-        <h3>Participation</h3>
+        <h3>Comments and Participation</h3>
         <p>
-          Your participation grade is a sum of your online activity. I will check to see that you are adding
-          proper summaries of your GitHub commits. You are also expected to help other students on Basecamp. 
-          This means polite give-and-take discussions of code. Do not discuse anything else. Practice professional 
-          and supportive critiquing. 
+          I will check to see that you are adding proper summaries of your GitHub commits. You are also expected to help other students on Basecamp. 
+          This means polite give-and-take discussions of code. Do not discuse anything else on basecamp. Practice professional and supportive critiquing. 
       </section>
       <section id="technology-policy">
         <h3>Course Technology Policy</h3>
