--- a/syllabuspages/policies.html
+++ b/syllabuspages/policies.html
@@ -208,7 +208,7 @@
         <h3>Comments and Participation</h3>
         <p>
           I will check to see that you are adding proper summaries of your GitHub commits. You are also expected to help other students on Basecamp. 
-          This means polite give-and-take discussions of code. Do not discuse anything else on basecamp. Practice professional and supportive critiquing. 
+          This means polite give-and-take discussions of code. Do not discuss anything else on basecamp. Practice professional and supportive critiquing. 
       </section>
       <section id="technology-policy">
         <h3>Course Technology Policy</h3>
