--- a/index.html
+++ b/index.html
@@ -375,10 +375,7 @@
                 <ol>
                   <li class="meeting">
                     <ol>
-                      <li>CSS Attribute Selectors</li>
-                      <li>CSS Transitions, Transformations, and Animations</li>
-                      <li>Responsive Design</li>
-                      <li>JavaScript Intor
+                      <li>TBA</li>
                     </ol>
                   </li>
                 </ol>
@@ -386,8 +383,7 @@
               <section class="assigned">
                 <h4>Assinged Reading</h4>
                 <ol>
-                  <li><em>Eloquent JavaScript 2nd ed.</em>, Chapters 12-14, 17-18</li>
-                  <li><em>HTML5 for Web Designers, 2nd ed.</em>, Chapter 4</li>
+                  <li>TBA</li>
                 </ol>
               </section>
             </article>
@@ -399,10 +395,7 @@
                 <ol>
                   <li class="meeting">
                     <ol>
-                      <li>CSS Attribute Selectors</li>
-                      <li>CSS Transitions, Transformations, and Animations</li>
-                      <li>Responsive Design</li>
-                      <li>JavaScript Intor
+                      <li>TBA</li>
                     </ol>
                   </li>
                 </ol>
@@ -410,8 +403,7 @@
               <section class="assigned">
                 <h4>Assinged Reading</h4>
                 <ol>
-                  <li><em>Eloquent JavaScript 2nd ed.</em>, Chapters 12-14, 17-18</li>
-                  <li><em>HTML5 for Web Designers, 2nd ed.</em>, Chapter 4</li>
+                  <li>TBA</li>
                 </ol>
               </section>
             </article>
@@ -423,10 +415,7 @@
                 <ol>
                   <li class="meeting">
                     <ol>
-                      <li>CSS Attribute Selectors</li>
-                      <li>CSS Transitions, Transformations, and Animations</li>
-                      <li>Responsive Design</li>
-                      <li>JavaScript Intor
+                      <li>TBA</li>
                     </ol>
                   </li>
                 </ol>
@@ -434,8 +423,7 @@
               <section class="assigned">
                 <h4>Assinged Reading</h4>
                 <ol>
-                  <li><em>Eloquent JavaScript 2nd ed.</em>, Chapters 12-14, 17-18</li>
-                  <li><em>HTML5 for Web Designers, 2nd ed.</em>, Chapter 4</li>
+                  <li>TBA</li>
                 </ol>
               </section>
             </article>
