Updating calender link

--- a/syllabuspages/dates.html
+++ b/syllabuspages/dates.html
@@ -53,7 +53,7 @@
         </tr>
         <tr>
           <td>09/26</td>
-          <td class="alignleft">Comements Due</td>
+          <td class="alignleft">Comments Due</td>
         </tr>
         <tr>
           <td>10/03</td>
@@ -92,7 +92,7 @@
           <td class="alignleft">Final Turn In</td>
         </tr>
       </table>
-      <div title="Add to Calendar" class="addeventstc" data-id="Jq5575">Add Projects to Calendar</div>
+      <div title="Add to Calendar" class="addeventstc" data-id="lF7869">Add Projects to Calendar</div>
       <table id="pptable">
         <tr class="tablehead">
           <td class="firstrow"></td>
