Update to lab due date link

--- a/syllabuspages/dates.html
+++ b/syllabuspages/dates.html
@@ -127,7 +127,7 @@
           <td>Lab-6</td>
         </tr>
       </table>
-      <div title="Add to Calendar" class="addeventstc" data-id="UK5576">Add Labs to Calendar</div>
+      <div title="Add to Calendar" class="addeventstc" data-id="EM7870">Add Labs to Calendar</div>
       <table id="tasktable">
         <tr class="tablehead">
           <td class="firstrow"></td>
