Adding video link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         This class covers the foundational principles of web development. How to research client-server
         architecture according to current open standards. Taught by
         <a href="#instructor">Professor Daniel Krieglstein</a>. Course developed by IIT 
-        Professors <a href="https://appliedtech.iit.edu/people/brian-bailey">Brian Bailey</a>, <a href="https://humansciences.iit.edu/faculty/karl-stolley">Dr. Karl Stolley</a>, &amp; Daniel Krieglstein</a>.
+        Professors <a href="https://appliedtech.iit.edu/people/brian-bailey">Brian Bailey</a>, 
+        <a href="https://humansciences.iit.edu/faculty/karl-stolley">Dr. Karl Stolley</a>, &amp; Daniel Krieglstein</a>.
       </p>
       <nav id="navigation">
         <ul class="nav">
@@ -35,7 +36,7 @@
         <ol class="calendar-weeks">
           <li class="week">
             <article id="class-01">
-              <h3>Tuesday, August 22 <small>First&nbsp;Class: <a href="#">Class Video</a></small></h3>
+              <h3>Tuesday, August 22 <small>First&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -66,7 +67,7 @@
           </li>
           <li class="week">
             <article id="class-02">
-              <h3>Tuesday, August 29 <small>Second&nbsp;Class: <a href="#">Class Video</a></small></h3>
+              <h3>Tuesday, August 29 <small>Second&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -91,7 +92,7 @@
           </li>
           <li class="week">
             <article id="class-03">
-              <h3>Tuesday, September 05 <small>Third&nbsp;Class: <a href="#">Class Video</a></small></h3>
+              <h3>Tuesday, September 05 <small>Third&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -124,7 +125,7 @@
           </li>
           <li class="week">
             <article id="class-04">
-              <h3>Tuesday, September 12 <small>Fourth&nbsp;Class: <a href="#">Class Video</a></small></h3>
+              <h3>Tuesday, September 12 <small>Fourth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -148,7 +149,7 @@
           </li>
           <li class="week">
             <article id="class-05">
-              <h3>Tuesday, September 19 <small>Fifth&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, September 19 <small>Fifth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -185,7 +186,7 @@
           </li>
           <li class="week">
             <article id="class-06">
-              <h3>Tuesday, September 26 <small>Sixth&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, September 26 <small>Sixth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -219,7 +220,7 @@
           </li>
           <li class="week">
             <article id="class-07">
-              <h3>Tuesday, October 03 <small>Seventh&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, October 03 <small>Seventh&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -252,7 +253,7 @@
           </li>
           <li class="week">
             <article id="class-08">
-              <h3>Tuesday, October 10 <small>Eigth&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, October 10 <small>Eigth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -280,7 +281,7 @@
           </li>
           <li class="week">
             <article id="class-09">
-              <h3>Tuesday, October 17 <small>Ninth&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, October 17 <small>Ninth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html#">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -301,7 +302,7 @@
           </li>
           <li class="week">
             <article id="class-10">
-              <h3>Tuesday, October 24 <small>Tenth&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, October 24 <small>Tenth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -325,7 +326,7 @@
           </li>
           <li class="week">
             <article id="class-11">
-              <h3>Tuesday, October 31 <small>Eleventh&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, October 31 <small>Eleventh&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -349,7 +350,7 @@
           </li>
           <li class="week">
             <article id="class-12">
-              <h3>Tuesday, November 07 <small>Twelfth&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, November 07 <small>Twelfth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -370,7 +371,7 @@
           </li>
           <li class="week">
             <article id="class-13">
-              <h3>Tuesday, November 14 <small>Thirteenth&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, November 14 <small>Thirteenth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -390,7 +391,7 @@
           </li>
           <li class="week">
             <article id="class-14">
-              <h3>Tuesday, November 21 <small>Fourteenth&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, November 21 <small>Fourteenth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
@@ -410,7 +411,7 @@
           </li>
           <li class="week">
             <article id="class-15">
-              <h3>Tuesday, November 28 <small>Fifteenth&nbsp;Class: <a href="#">Class Video</a></small></small></h3>
+              <h3>Tuesday, November 28 <small>Fifteenth&nbsp;Class: <a href="https://media.iitonline.iit.edu/lectures/F17_ITMD-361-1_zLrtdXrzunx9xXpwwTWRKQWPxpqEQMZACEqFuwJf/index.html">Class Video</a></small></small></h3>
               <section class="agenda">
                 <ol>
                   <li class="meeting">
