--- a/syllabuspages/dates.html
+++ b/syllabuspages/dates.html
@@ -159,7 +159,8 @@
         <li><a href="mailto:dkriegls@gmail.com">dkriegls@gmail.com</a></li>
         <li><a href="https://www.linkedin.com/in/danielkrieglstein">danielkrieglstein</a> on Linkedin</li>
         <li id="office-hours">
-          <b>Office hours are by request just before or after class or via GChat when avaiable</b>. I&#39;m always signed into GChat. Message me any time. I always make students a priority.
+          <b>Office hours are by request just before or after class or via GChat when avaiable</b>. I&#39;m usually signed into GChat. 
+          Message me any time. I always make students a priority.
         </li>
       </ul>
     </aside>
