--- a/labs/lab1/lab1.html
+++ b/labs/lab1/lab1.html
@@ -5,7 +5,8 @@
 	<title>ITMD-361 Internet Technologies and Web Design</title>
 </head>
 <body>
+  <h1>THis is a heading</h1>
   <p>Hello world. This is my first website!<p>
-  <p>Instructions: rewrite this page by adding a few sentances about yourself. Add a heading. Post it to your github repository<p>
+  <p>THis is a paragraph about me.</p>
 </body>
 </html>
