changing lab name

--- a/demos/class9demo/Animation Demo.html
+++ b/demos/class9demo/Animation Demo.html
@@ -46,7 +46,7 @@
 			width: 200px;
 			height: 200px;
 			-webkit-animation-name: colors; 
-			-webkit-animation-duration: 20.5s; 
+			-webkit-animation-duration: 5s; 
 			-webkit-animation-timing-function: linear; 
 			-webkit-animation-iteration-count: infinite; 
 			-webkit-animation-direction: alternate;
@@ -60,7 +60,7 @@
 </head>
 <body>
 	<a href="" class="smooth">awesomesauce</a>
-	<br><br><br>
+	<br><br><br><!--DON'T EVER USE LINE BREAKS IN HTML-->
 	<div id="magic">Magic!</div>
 </body>
 </html>
