adding class demos

--- a/syllabuspages/projects.html
+++ b/syllabuspages/projects.html
@@ -266,7 +266,7 @@
               <b class="redfont">Due: Tuesday, November 28th, 11:59pm Chicago</b> Final update to your Basecamp post with the following
               <ol>
                 <li>
-                  Javascript: Iclusion of either a google maps api utilizing at least three javascript features, 
+                  Javascript: Inclusion of either a google maps api utilizing at least three javascript features, 
                   or a javscript based rotating picture display.
                 </li>
                 <li>
