--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="page">
     <header id="header">
-      <h1><small>ITMD 361: all 2017</small> Fundamentals&nbsp;of Web Development</h1>
+      <h1><small>ITMD 361: Fall 2017</small> Fundamentals&nbsp;of Web Development</h1>
       <p class="tagline">
         This class covers the foundational principles of web development. How to research client-server
         architecture according to current open standards. Taught by
